# mlx-mnist-cxx

./: .gitignore  CMakeLists.txt  CPM.cmake  README.md  Taskfile.yml  arena.h  dataset.h  mnist-viz.cpp  mnist.cpp
